Wed Dec 31 17:46:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/Test_Logger/Test_Logger_i.cpp:

          . Added more debug output to the client.

Wed Dec 31 08:23:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/client/Barrier_Client.cpp:
        * cuts/utils/barrier/server/Barrier_i.cpp:

          . Bug fix where the barrier failed to duplicate the callback's
            reference. This resulted in invalid reference in the server, and
            prevented it from signaling the nodes.

Wed Dec 31 08:12:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/client/Barrier_Client.h:
        * cuts/utils/barrier/client/Barrier_Client.cpp:

          . Refactored the code.

Wed Dec 31 08:00:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/barrier.idl:
        * cuts/utils/barrier/client/Barrier_Client.h:
        * cuts/utils/barrier/client/Barrier_Client.cpp:
        * cuts/utils/barrier/server/Barrier_Server.cpp:
        * cuts/utils/barrier/server/Barrier_i.h:
        * cuts/utils/barrier/server/Barrier_i.cpp:

          . The host/client specifies an unique name when registering with
            the barrier.

          . Bug fix where Ctrl+C the barrier failed to abort registered
            clients.

          . Bug fix where registering duplicate names resulted in a
            segfault in the barrier client application.

Wed Dec 31 06:53:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/server/Barrier_i.h:
        * cuts/utils/barrier/server/Barrier_i.cpp:

          . Protected the register_client () method with a thread mutex
            just in case there is a race condition. This should not be
            the case, however, since the object is activated under the
            RootPOA, which should be single-threaded by default.
