@@ -1,3 +1,11 @@
+Wed Dec 31 19:12:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/testing/Test_Options.h:
+        * cuts/utils/testing/Testing_App.cpp:
+
+          . Added a new command-line parameters --ignore-error, which is used
+            to ignore startup/shutdown errors, and keep working.
+
 Wed Dec 31 17:46:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/workers/Test_Logger/Test_Logger_i.cpp:
